--- a/SudentMgnt/frontend/studentmgnt/src/app/components/layout/sidebar/sidebar.component.html
+++ b/SudentMgnt/frontend/studentmgnt/src/app/components/layout/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<mat-nav-list>
+<mat-nav-list style="width: 230px;">
     <mat-list-item>
         <button routerLink="card" mat-button><mat-icon>dashboard</mat-icon> Dashboard</button>
     </mat-list-item>
