--- a/SudentMgnt/frontend/studentmgnt/src/app/app.component.html
+++ b/SudentMgnt/frontend/studentmgnt/src/app/app.component.html
@@ -1,12 +1,15 @@
 
 <app-header></app-header>
-<mat-drawer-container autosize>
+<div class="mt-4" style="text-align: center;">
+  <router-outlet></router-outlet>
+</div>
+<!-- <mat-drawer-container autosize>
   <mat-drawer #drawer opened="true" mode="side" position="start">
     <app-sidebar></app-sidebar>
   </mat-drawer>
   <mat-drawer-content>
-      <div style="text-align: center;min-height: 600px;">
+      <div class="mt-3" style="text-align: center;height: 90vh; min-height: 600px;">
         <router-outlet></router-outlet>
       </div>
   </mat-drawer-content>
-</mat-drawer-container>
+</mat-drawer-container> -->
