--- a/SudentMgnt/frontend/studentmgnt/src/app/components/students/students.component.html
+++ b/SudentMgnt/frontend/studentmgnt/src/app/components/students/students.component.html
@@ -1,1 +1,53 @@
-<p>students works!</p>
+<div class="mx-auto" style="margin-top: 1.5rem;">
+    <mat-form-field>
+        <mat-label>Filter</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+    </mat-form-field>
+    <div class="mat-elevation-z8" style="width: 70%; margin-left: auto; margin-right: auto;">
+        <table mat-table [dataSource]="studentTableDataSource" matSort>
+
+            <!-- ID Column -->
+            <ng-container matColumnDef="id">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+                <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+            </ng-container>
+
+            <!-- Name Column -->
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Full Name </th>
+                <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+            </ng-container>
+
+            <!-- Date of Birth Column -->
+            <ng-container matColumnDef="birthDate">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Date of birth </th>
+                <td mat-cell *matCellDef="let row"> {{row.birthDate}} </td>
+            </ng-container>
+
+            <!-- Faculty -->
+            <ng-container matColumnDef="faculty">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Faculty </th>
+                <td mat-cell *matCellDef="let row"> {{row.faculty}} </td>
+            </ng-container>
+
+            <!-- Action Column -->
+            <ng-container matColumnDef="action">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
+                <td mat-cell *matCellDef="let row">
+                    <button routerLink="/student-detail" routerLinkActive="active" ariaCurrentWhenActive="page">Details</button>
+                   
+                  </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="studentTableDisplayColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: studentTableDisplayColumns;"></tr>
+
+            <!-- Row shown when there is no matching data. -->
+            <tr class="mat-row" *matNoDataRow>
+                <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+            </tr>
+        </table>
+
+        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+    </div>
+</div>
