working in studetails card design

--- a/SudentMgnt/frontend/studentmgnt/src/app/components/student-detail/student-detail.component.html
+++ b/SudentMgnt/frontend/studentmgnt/src/app/components/student-detail/student-detail.component.html
@@ -1,1 +1,36 @@
-<p>student-detail works!</p>
+<div style="width: 70%; margin-top: 1.5rem; margin-left: auto; margin-right: auto;">
+    <mat-card>
+        <mat-card-header>
+            <mat-card-title>Khageshor Giri</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+            <div>
+                <img src="" />
+            </div>
+            <div style="margin-top: 2rem;">
+                <table>
+                    <tbody>
+
+                        <tr>
+                            <td>Name</td>
+                            <td>Khageshor Giri</td>
+                        </tr>
+                        <tr>
+                            <td>Date of Birth</td>
+                            <td>205-05-26</td>
+                        </tr>
+                        <tr>
+                            <td>Faculty</td>
+                            <td>Computer Science</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </mat-card-content>
+        <hr />
+        <mat-card-actions align="end">
+            <button mat-raised-button color="primary">Edit</button>
+            <button mat-raised-button color="warn" style="margin-left: 10px;">Delete</button>
+        </mat-card-actions>
+    </mat-card>
+</div>
