desiging UI form

--- a/SudentMgnt/frontend/studentmgnt/src/app/components/layout/header/header.component.html
+++ b/SudentMgnt/frontend/studentmgnt/src/app/components/layout/header/header.component.html
@@ -7,6 +7,8 @@
   <button routerLink="" routerLinkActive="active-link" ariaCurrentWhenActive="page" mat-button>Home</button>
   <button routerLink="/students" routerLinkActive="active-link" ariaCurrentWhenActive="page" mat-button>Students</button>
   <button routerLink="" routerLinkActive="active-link" ariaCurrentWhenActive="page" mat-button>Courses</button>
+  <button routerLink="/login" routerLinkActive="active-link" ariaCurrentWhenActive="page" mat-button>Login</button>
+  <button routerLink="/register" routerLinkActive="active-link" ariaCurrentWhenActive="page" mat-button>Register</button>
   <!-- <a href="#" mat-raised-button color="accent">Join Us</a> -->
   <button (click)="badgevisibility()"  mat-icon-button>
       <mat-icon matBadgeColor="accent" matBadge="15"  matBadgeSize="small">notifications</mat-icon>
