--- a/SudentMgnt/frontend/studentmgnt/src/app/components/add-student/add-student.component.html
+++ b/SudentMgnt/frontend/studentmgnt/src/app/components/add-student/add-student.component.html
@@ -1,33 +1,46 @@
-<div class="container">
-    <form [formGroup]="addStudentForm" (ngSubmit)= "onFormSubmit($event)">
-        <div class="row mt-4">
-            <div class="col-md-4">
-                <div class="form-group">
-                    <label class="form-label">Full Name</label>
-                    <input class="form-control" type="text" formControlName="fullName"/>
-                </div>
+
+<div class=container>
+    <div class="row col-md-12">
+        <div class="col-md-3"></div>
+        <div class="col-md-6">
+            <div class="col-md-2 mb-3">
+                <button routerLink="/students" routerLinkActive="active" class="btn btn-primary">Go Back</button>
             </div>
-            <div class="col-md-4">
-                <div class="form-group">
-                    <label class="form-label">Date of Birth</label>
-                    <input class="form-control" type="date" formControlName="birthDate"/>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="form-group">
-                    <label class="form-label">Faculty</label>
-                    <select class="form-control" id="faculty" formControlName="faculty" type="text">
-                        <option value="" disabled selected>Select a Faculty</option>
-                        <option value="engineering">Engineering</option>
-                        <option value="science">Science</option>
-                        <option value="arts">Arts</option>
-                        <!-- Add more options as needed -->
-                      </select>
+            <div class="card shadow p-3">
+                <div class="card-body">
+                    <form [formGroup]="addStudentForm" (ngSubmit)="onFormSubmit($event)">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="form-group">
+                                    <input class="form-control" placeholder="Full Name" type="text" formControlName="fullName" required />
+                                </div>
+                            </div>
+                            <div class="col-md-12 mt-3">
+                                <div class="form-group">
+                                    <input class="form-control" placeholder="Birth Date" type="date" formControlName="birthDate" required />
+                                </div>
+                            </div>
+                            <div class="col-md-12 mt-3">
+                                <div class="form-group">
+                                    <select class="form-control" id="faculty" formControlName="faculty" type="text">
+                                        <option value="" disabled selected>Select a Faculty</option>
+                                        <option value="engineering">Engineering</option>
+                                        <option value="science">Science</option>
+                                        <option value="arts">Arts</option>
+                                        <!-- Add more options as needed -->
+                                      </select>
+                                </div>
+                            </div>
+                            <div class="col-md-12 mt-4">
+                                <div class="form-group">
+                                    <button class="btn btn-info">Add Student</button>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
-        <div class="mt-4">
-            <button class="btn btn-success" >Add Student</button>
-        </div>
-    </form>
+        <div class="col-md-3"></div>
+    </div>
 </div>
