--- a/SudentMgnt/frontend/studentmgnt/src/app/components/register/register.component.html
+++ b/SudentMgnt/frontend/studentmgnt/src/app/components/register/register.component.html
@@ -1,1 +1,43 @@
-<p>register works!</p>
+<div class=container>
+    <div class="row col-md-12">
+        <div class="col-md-3"></div>
+        <div class="col-md-6">
+            <div class="card shadow p-3">
+                <div class="card-body">
+                    <form [formGroup]="registerForm" (ngSubmit)="onRegister($event)">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="form-group">
+                                    <input class="form-control" placeholder="Email" type="email" formControlName="userName" required />
+                                </div>
+                            </div>
+                            <div class="col-md-12 mt-3">
+                                <div class="form-group">
+                                    <input class="form-control" placeholder="Password" type="password" formControlName="password" required />
+                                </div>
+                            </div>
+                            <div class="col-md-12 mt-3">
+                                <div class="form-group">
+                                    <input class="form-control" placeholder="Conform Password" type="password" formControlName="conformPassword" required />
+                                </div>
+                            </div>
+                            <div class="col-md-12 mt-4">
+                                <div class="form-group">
+                                    <button class="btn btn-info">Register</button>
+                                </div>
+                            </div>
+                            <div class="col-md-12 mt-2">
+                                <div class="form-group">
+                                    <p class="text-info">Already have account? <br />
+                                        <a routerLink="/login" routerLinkActive="active"><b>Login</b></a>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3"></div>
+    </div>
+</div>
